--- a/uas_mocom/app/src/main/res/values/colors.xml
+++ b/uas_mocom/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_background">#0B1628</color>
+    <color name="ic_launcher_background">#0B1628</color>
 </resources>
